Bug 459556 - SIGABRT ASSERT:isValid() on Q_EMIT dataChanged(first, last) in JournalModel::resetRowHeightInformation()
Summary: SIGABRT ASSERT:isValid() on Q_EMIT dataChanged(first, last) in JournalModel:...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-23 09:32 UTC by Dawid Wróbel
Modified: 2024-08-17 20:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Wróbel 2022-09-23 09:32:23 UTC
SUMMARY
This is happening upon application launch in JournalModel::resetRowHeightInformation(). rowCount() is 0, making lastRow equal to -1, which passed to index(lastRow, columnCount() - 1) makes it fail the isValid() assertion.

Not sure why this started to happen all of the sudden, didn't have this issue before and the code changes don't explain it.
Comment 1 Dawid Wróbel 2022-09-23 09:38:22 UTC
Git commit 4bc3685c52e4c0afce519885961ae51f3c7f4a7e by Dawid Wróbel.
Committed on 23/09/2022 at 09:35.
Pushed by wrobelda into branch 'master'.

resetRowHeightInformation(): check index isValid() before Q_EMIT

M  +4    -1    kmymoney/mymoney/storage/journalmodel.cpp

https://invent.kde.org/office/kmymoney/commit/4bc3685c52e4c0afce519885961ae51f3c7f4a7e