resetRowHeightInformation(): check index isValid() before Q_EMIT

BUG: 459556